fixed flexbox wrapping

--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ canvas {
     background-repeat: no-repeat;
     margin: auto;
     transition: 2s;
+    flex-wrap: wrap;
 }
 
 ul {
@@ -347,18 +348,17 @@ canvas:hover h1 {
   }
 
   .photo {
-      height: 256px;
-      width: 256px;
-      background-size: cover;
+      height: 128px;
+      width: 128px;
+      background-size: contain;
       background-repeat: no-repeat;
       margin: 40px;
       transition: 0.6s;
-      position: relative;
+      padding: 0px;
   }
 
   .photo:hover {
-      height: 270px;
-      width: 270px;
+      padding: 40px;
   }
 
   .bubble {
